--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,7 +3,11 @@ unique_ids:
     dashboard.html: MOUQRC3DJBEBLBWEBFVBQLXVGEERKDYW
     single-column.html: OTZX33ILARO3MONSZZTLQMFXTLHF7CPS
     theme.css: LKQIR4WIEIHDFGDMM2WPEUMUBQT6WUSJ
-  forms: {}
+  forms:
+    Form1: '172715545738822722056963.08771'
+    Form1.RowTemplate1: '1727155785817603183519649.3372'
+    Form1.RowTemplate2: '1727155798781102791011946.62177'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1727156114967590677207477.4586'
