Created Form1.RowTemplate3, global_var, Form1.ItemTemplate1 and Form1.RowTemplate4; Edited Form1, Form1.RowTemplate1, Form1.RowTemplate2, ServerModule1 and 1 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,9 +5,13 @@ unique_ids:
     theme.css: LKQIR4WIEIHDFGDMM2WPEUMUBQT6WUSJ
   forms:
     Form1: '172715545738822722056963.08771'
+    Form1.ItemTemplate1: '1727167038086136704639178.8742'
     Form1.RowTemplate1: '1727155785817603183519649.3372'
     Form1.RowTemplate2: '1727155798781102791011946.62177'
-  modules: {}
+    Form1.RowTemplate3: '1727167659732589675556084.037'
+    Form1.RowTemplate4: '1727168419682931072783974.5438'
+  modules:
+    global_var: '1727170969918387961590969.22046'
   scripts: {}
   server_modules:
     ServerModule1: '1727156114967590677207477.4586'
