--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,7 +1,7 @@
 allow_embedding: false
 db_schema:
   agent_data:
-    client: none
+    client: search
     columns:
     - admin_ui: {order: 0, width: 200}
       name: agent_id
@@ -14,8 +14,8 @@ db_schema:
       type: string
     server: full
     title: Table 2
-  leave_data:
-    client: none
+  agent_leave:
+    client: search
     columns:
     - admin_ui: {order: 0, width: 200}
       name: date_leave
@@ -23,21 +23,9 @@ db_schema:
     - admin_ui: {order: 1, width: 200}
       name: name
       type: string
-    - admin_ui: {order: 2, width: 200}
-      name: email
-      type: string
     - admin_ui: {order: 3, width: 200}
       name: reason
       type: string
-    - admin_ui: {order: 4, width: 200}
-      name: day
-      type: number
-    - admin_ui: {order: 5, width: 200}
-      name: month
-      type: number
-    - admin_ui: {order: 6, width: 200}
-      name: year
-      type: number
     server: full
     title: Table 1
 name: Classic 1
