--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -26,9 +26,9 @@ components:
     name: file_loader_2
     properties: {}
     type: FileLoader
-  - event_bindings: {click: button_3_click}
+  - event_bindings: {click: upload_agent_click}
     layout_properties: {grid_position: 'PKJRXJ,KFKAER'}
-    name: button_3
+    name: upload_agent
     properties: {text: Upload Agent}
     type: Button
   - layout_properties: {grid_position: 'SEPRDE,GGZPTW'}
@@ -97,10 +97,20 @@ components:
       name: card_4
       properties: {role: card}
       type: ColumnPanel
-    - layout_properties: {}
-      name: button_6
+    - event_bindings: {click: create_schedule_click}
+      layout_properties: {}
+      name: create_schedule
       properties: {text: Create Schedule}
       type: Button
+    - components:
+      - layout_properties: {grid_position: 'MADBAR,TIUDVX'}
+        name: final_table
+        properties: {role: 'horizontal_scroll '}
+        type: RichText
+      layout_properties: {}
+      name: card_5
+      properties: {role: card}
+      type: ColumnPanel
     layout_properties: {grid_position: 'SVUYWO,VGKPCM'}
     name: data_row_panel_2
     properties: {}
