Edited ServerModule1, Form1 and custom package dependencies

--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -111,6 +111,11 @@ components:
       name: card_5
       properties: {role: card}
       type: ColumnPanel
+    - event_bindings: {click: download_result_click}
+      layout_properties: {}
+      name: download_result
+      properties: {text: Download Result}
+      type: Button
     layout_properties: {grid_position: 'SVUYWO,VGKPCM'}
     name: data_row_panel_2
     properties: {}
