--- a/anvil.yaml
+++ b/anvil.yaml
@@ -58,4 +58,5 @@ services:
 - client_config: {}
   server_config: {auto_create_missing_columns: true}
   source: /runtime/services/tables.yml
-startup_form: Form1
+startup: {module: VNCA, type: form}
+startup_form: null
