--- a/client_code/VNCA/form_template.yaml
+++ b/client_code/VNCA/form_template.yaml
@@ -8,7 +8,7 @@ components:
   - components:
     - components:
       - name: agent_data_repeating
-        properties: {item_template: Form1.RowTemplate3}
+        properties: {item_template: VNCA.RowTemplate3}
         type: RepeatingPanel
       layout_properties: {grid_position: 'BQLSAV,LBCCHU'}
       name: agent_data_grid
@@ -22,7 +22,8 @@ components:
     name: card_2
     properties: {role: card}
     type: ColumnPanel
-  - layout_properties: {grid_position: 'ONFBMZ,MHKILA'}
+  - data_bindings: []
+    layout_properties: {grid_position: 'ONFBMZ,MHKILA'}
     name: file_loader_2
     properties: {}
     type: FileLoader
@@ -38,7 +39,7 @@ components:
   - components:
     - components:
       - name: agent_leave_repeating
-        properties: {item_template: Form1.RowTemplate4}
+        properties: {item_template: VNCA.RowTemplate4}
         type: RepeatingPanel
       layout_properties: {grid_position: 'CANSJY,QUELOX'}
       name: data_grid_1
@@ -79,7 +80,9 @@ components:
         name: holiday_text
         properties: {enabled: false, visible: true}
         type: TextArea
-      - layout_properties: {grid_position: 'WZXZNS,RTJBYR'}
+      - data_bindings: []
+        event_bindings: {show: holiday_date_show}
+        layout_properties: {full_width_row: false, grid_position: 'WZXZNS,RTJBYR'}
         name: holiday_date
         properties: {}
         type: DatePicker
@@ -97,37 +100,82 @@ components:
       name: card_4
       properties: {role: card}
       type: ColumnPanel
-    - event_bindings: {click: create_schedule_click}
-      layout_properties: {}
-      name: create_schedule
-      properties: {text: Create Schedule}
-      type: Button
-    - components:
-      - layout_properties: {grid_position: 'MADBAR,TIUDVX'}
-        name: final_table
-        properties: {role: 'horizontal_scroll '}
-        type: RichText
-      layout_properties: {}
-      name: card_5
-      properties: {role: card}
-      type: ColumnPanel
-    - event_bindings: {click: download_result_click}
-      layout_properties: {}
-      name: download_result
-      properties: {text: Download Result}
-      type: Button
     layout_properties: {grid_position: 'SVUYWO,VGKPCM'}
     name: data_row_panel_2
     properties: {}
     type: DataRowPanel
+  - layout_properties: {grid_position: 'KBMBER,KDKOSP'}
+    name: label_6
+    properties: {text: 'Input Daily Agent Shift Required '}
+    type: Label
+  - layout_properties: {grid_position: 'SNXMQO,ELJFUF NYTCCJ,OZOVZM'}
+    name: text_area_1
+    properties: {enabled: false, height: 48, text: A1}
+    type: TextArea
+  - layout_properties: {grid_position: 'SNXMQO,ELJFUF LTXNOP,QAOFCI'}
+    name: text_area_2
+    properties: {enabled: false, height: 48, text: A2}
+    type: TextArea
+  - layout_properties: {grid_position: 'SNXMQO,ELJFUF AYHABK,LQXSTX'}
+    name: text_area_3
+    properties: {enabled: false, height: 48, text: A5}
+    type: TextArea
+  - data_bindings: []
+    event_bindings: {show: text_box_1_show}
+    layout_properties: {grid_position: 'SNXMQO,MQBFUZ XKQZTW,GYJIBT'}
+    name: text_box_1
+    properties: {hide_text: false, placeholder: Insert Number of Agent(s) Needed, text: '', type: number}
+    type: TextBox
+  - event_bindings: {show: text_box_2_show}
+    layout_properties: {grid_position: 'SNXMQO,MQBFUZ JJKGNG,RYBDCH'}
+    name: text_box_2
+    properties: {placeholder: Insert Number of Agent(s) Needed, type: number}
+    type: TextBox
+  - event_bindings: {show: text_box_3_show}
+    layout_properties: {grid_position: 'SNXMQO,MQBFUZ IRSXPB,BUDWQB'}
+    name: text_box_3
+    properties: {placeholder: Insert Number of Agent(s) Needed, type: number}
+    type: TextBox
+  - layout_properties: {grid_position: 'IVLTFF,JYCSLE'}
+    name: spacer_1
+    properties: {height: 110}
+    type: Spacer
+  - event_bindings: {click: create_schedule_click}
+    layout_properties: {grid_position: 'EMTKKW,UWXMEB'}
+    name: create_schedule
+    properties: {text: Create Schedule}
+    type: Button
+  - components:
+    - layout_properties: {grid_position: 'MADBAR,TIUDVX'}
+      name: final_table
+      properties: {role: 'horizontal_scroll ', visible: false}
+      type: RichText
+    layout_properties: {grid_position: 'DZRNCD,PSTLXH'}
+    name: card_5
+    properties: {role: card, visible: false}
+    type: ColumnPanel
+  - event_bindings: {click: download_result_click}
+    layout_properties: {grid_position: 'GGDADU,SLNJPR'}
+    name: download_result
+    properties: {text: Download Result, visible: false}
+    type: Button
   layout_properties: {slot: default}
   name: content_panel
-  properties: {}
+  properties: {visible: true}
   type: ColumnPanel
 - layout_properties: {slot: title}
   name: label_1
   properties: {text: VN Scheduling}
   type: Label
+- layout_properties: {slot: sidebar}
+  name: link_1
+  properties: {text: VNCA}
+  type: Link
+- event_bindings: {click: link_2_click}
+  layout_properties: {slot: sidebar}
+  name: link_2
+  properties: {text: Guide}
+  type: Link
 container:
   properties: {html: '@theme:dashboard.html'}
   type: HtmlTemplate
