--- a/anvil.yaml
+++ b/anvil.yaml
@@ -51,8 +51,15 @@ name: VNCA
 package_name: VNCA
 runtime_options:
   client_version: '3'
-  server_spec: {base: python310-standard}
-  server_version: python3-sandbox
+  server_spec: null
+  server_spec_disabled:
+    base: python310-standard
+    requirements: |-
+      PuLP==2.9.0
+      tabulate==0.9.0
+      xlrd==2.0.1
+      psycopg2==2.9.9
+  server_version: python3-full
   version: 2
 secrets:
   db_password:
