--- a/anvil.yaml
+++ b/anvil.yaml
@@ -72,5 +72,8 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/secrets.yml
+- client_config: {allow_signup: false, confirm_email: true, enable_automatically: true, use_email: true}
+  server_config: {user_table: users}
+  source: /runtime/services/anvil/users.yml
 startup: {module: VNCA, type: form}
 startup_form: null
