--- a/client_code/VNCA/form_template.yaml
+++ b/client_code/VNCA/form_template.yaml
@@ -51,7 +51,7 @@ components:
       type: DataGrid
     layout_properties: {grid_position: 'WWTJRB,MIZVMK'}
     name: card_11
-    properties: {role: card}
+    properties: {role: card, visible: false}
     type: ColumnPanel
   - components:
     - components:
