Created new_file.css; Edited settings, ServerModule1 and query

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,6 +1,7 @@
 unique_ids:
   assets:
     dashboard.html: MOUQRC3DJBEBLBWEBFVBQLXVGEERKDYW
+    new_file.css: '1727493697622925786633921.7775'
     single-column.html: OTZX33ILARO3MONSZZTLQMFXTLHF7CPS
     theme.css: LKQIR4WIEIHDFGDMM2WPEUMUBQT6WUSJ
   forms:
