--- a/anvil.yaml
+++ b/anvil.yaml
@@ -75,5 +75,8 @@ services:
 - client_config: {allow_signup: false, confirm_email: true, enable_automatically: true, use_email: true}
   server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
+- client_config: {}
+  server_config: {file_table: files}
+  source: /runtime/services/anvil/files.yml
 startup: {module: VNCA, type: form}
 startup_form: null
