--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,7 +1,8 @@
 unique_ids:
   assets:
     dashboard.html: MOUQRC3DJBEBLBWEBFVBQLXVGEERKDYW
-    new_file.css: '1727493697622925786633921.7775'
+    resource/.gitkeep: '1727496972683551457544638.1249'
+    resource/pinner.png: '1727496965283114772645430.67856'
     single-column.html: OTZX33ILARO3MONSZZTLQMFXTLHF7CPS
     theme.css: LKQIR4WIEIHDFGDMM2WPEUMUBQT6WUSJ
   forms:
