Created resource/deny.png; Edited theme.css and VNCA

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,6 +2,7 @@ unique_ids:
   assets:
     dashboard.html: MOUQRC3DJBEBLBWEBFVBQLXVGEERKDYW
     resource/.gitkeep: '1727496972683551457544638.1249'
+    resource/deny.png: '1727499560840910320715728.103'
     resource/pinner.png: '1727496965283114772645430.67856'
     single-column.html: OTZX33ILARO3MONSZZTLQMFXTLHF7CPS
     theme.css: LKQIR4WIEIHDFGDMM2WPEUMUBQT6WUSJ
