Edited theme.css, ServerModule1 and VNCA

--- a/client_code/VNCA/form_template.yaml
+++ b/client_code/VNCA/form_template.yaml
@@ -95,7 +95,7 @@ components:
     - components:
       - layout_properties: {grid_position: 'PUCQEU,ODXKES'}
         name: holiday_text
-        properties: {enabled: false, visible: true}
+        properties: {background: '', bold: true, enabled: false, font_size: 16, foreground: '', height: 88, visible: true}
         type: TextArea
       - data_bindings: []
         event_bindings: {show: holiday_date_show}
