--- a/client_code/VNCA/form_template.yaml
+++ b/client_code/VNCA/form_template.yaml
@@ -30,7 +30,7 @@ components:
   - event_bindings: {click: upload_agent_click}
     layout_properties: {grid_position: 'PKJRXJ,KFKAER', row_background: ''}
     name: upload_agent
-    properties: {font_size: null, role: upload_button, text: Upload Agent}
+    properties: {font_size: 15, role: upload_button, text: Upload Agent}
     type: Button
   - layout_properties: {grid_position: 'SEPRDE,GGZPTW'}
     name: label_3
@@ -77,13 +77,18 @@ components:
   - event_bindings: {click: upload_leave_click}
     layout_properties: {grid_position: 'LIYVDZ,LXEDVO'}
     name: upload_leave
-    properties: {text: Upload Leave}
+    properties: {font_size: 15, text: Upload Leave}
     type: Button
   - layout_properties: {grid_position: 'XBOULT,MHYLFN'}
     name: label_4
     properties: {text: 'Leave Request Status :'}
     type: Label
-  - layout_properties: {grid_position: 'NXUQET,YXIKEP'}
+  - components:
+    - layout_properties: {grid_position: 'IBXAXQ,AUBNEJ'}
+      name: leave_request_msg
+      properties: {auto_expand: true, enabled: false}
+      type: TextArea
+    layout_properties: {grid_position: 'NXUQET,YXIKEP'}
     name: card_3
     properties: {role: card}
     type: ColumnPanel
@@ -95,7 +100,7 @@ components:
     - components:
       - layout_properties: {grid_position: 'PUCQEU,ODXKES'}
         name: holiday_text
-        properties: {background: '', bold: true, enabled: false, font_size: 16, foreground: '', height: 88, visible: true}
+        properties: {auto_expand: true, background: '', bold: true, enabled: false, font_size: 16, foreground: '', height: 39, visible: true}
         type: TextArea
       - data_bindings: []
         event_bindings: {show: holiday_date_show}
@@ -106,12 +111,12 @@ components:
       - event_bindings: {click: add_holiday_click}
         layout_properties: {grid_position: 'VDHZUU,IRKKGR'}
         name: add_holiday
-        properties: {text: Add}
+        properties: {align: right, font_size: 12, text: Add}
         type: Button
       - event_bindings: {click: reset_holiday_click}
-        layout_properties: {grid_position: 'FEGFGH,RPKGEX'}
+        layout_properties: {grid_position: 'VDHZUU,IVTIVV'}
         name: reset_holiday
-        properties: {text: Reset}
+        properties: {align: left, font_size: 12, text: Reset}
         type: Button
       layout_properties: {}
       name: card_4
